# Long-Arithmetic

./: CMakeLists.txt  README.md
.github/workflows/: autotests.yml
examples/: CMakeLists.txt  main.cpp
include/: LongArithmetic.hpp  LongNum.hpp  LongNumMod.hpp
measurment/: averageTime.cpp
report/: CMakeLists.txt  averageTime.cpp  report.tex
src/: CMakeLists.txt  LongArithmetic.cpp  LongNum.cpp  LongNumMod.cpp
tests/: CMakeLists.txt  LongArithmeticTests.cpp  LongNumModTests.cpp  LongNumTests.cpp
